<resources>
    <string name="app_name">Easy SMS</string>
    <string name="user_name">User name </string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up_success">Thank you for register! Happy time with easySMS</string>
    <string name="title_alert">Oops! Something wrong </string>
    <string name="user_name_policy">Between 3 and 32 characters</string>
    <string name="password_policy">Your password should be at least 6 characters</string>
    <string name="forgot_password"><u>Forgot your password </u></string>
    <string name="error_empty_message">Please make sure you enter a username and password!</string>
    <string name="error_empty2_message">Please make sure you enter a username, email and password!</string>
    <string name="email_policy">Your email address will be used to identify you</string>
    <string name="email_miss">Please enter your email</string>
    <string name="name_miss">Your name is invalid!</string>
    <string name="password_miss">Please enter your password</string>
    <string name="birthday_miss">Please choose your birthday</string>
    <string name="email_error">Email is invalid. Please enter again</string>
    <string name="password_error">Password must be longer than 5 characters and not contain spaces</string>
    <string name="login_error">Email or Password is incorrect</string>
    <string name="network_error">There is no Internet connection</string>

    <!--<string name="title_alert">Oops! Something wrong </string>-->
</resources>
