<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.poiuyt.easysms.ui.acitivity.SignInActivity">

    <TextView
        android:id="@+id/tvHello"
        style="@style/TextViewOnlyShow"
        android:text="Hello guy"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til"
        style="@style/TextInput">

        <EditText
            android:id="@+id/edtEmail"
            style="@style/EditText"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:text="a@a.com"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til2"
        style="@style/TextInput">

        <EditText
            android:id="@+id/edtPassWord"
            style="@style/EditText"
            android:hint="@string/password"
            android:text="123456"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/TextViewOnlyShow"
        android:layout_margin="@dimen/item_margin_large"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Button"
            android:text="Sign in" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Button"
            android:text="Sign up" />


    </LinearLayout>
</LinearLayout>
